--- a/admin.html
+++ b/admin.html
@@ -1,225 +1,206 @@
-<!DOCTYPE html><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Panel Admin - Tilo Café</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Admin Carta - Tilo Café</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f6f6f6;
-      color: #333;
-      margin: 0;
-      padding: 0;
-    }
-    h1 {
-      text-align: center;
-      background: #8b5e3c;
-      color: white;
-      margin: 0;
-      padding: 15px 0;
-    }
-    .container {
-      max-width: 700px;
-      margin: 20px auto;
-      background: white;
-      border-radius: 10px;
-      padding: 20px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-    }
-    form input, form select, form textarea {
-      width: 100%;
-      padding: 8px;
-      margin: 5px 0;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-    }
-    form button {
-      background: #8b5e3c;
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    form button:hover {
-      background: #6b452b;
-    }
-    .product-list {
-      margin-top: 20px;
-    }
-    .item {
-      background: #fff8f3;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      padding: 10px;
-      margin-bottom: 10px;
-    }
-    .item h3 {
-      margin: 5px 0;
-    }
-    .item button {
-      background: #d9534f;
-      border: none;
-      color: white;
-      padding: 5px 10px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .item button:hover {
-      background: #c9302c;
-    }
-    .search-box {
-      text-align: center;
-      margin: 15px;
-    }
-    .search-box input {
-      width: 80%;
-      max-width: 400px;
-      padding: 8px;
-      border: 2px solid #8b5e3c;
-      border-radius: 5px;
-    }
+    body { font-family: Arial, sans-serif; margin:20px; background:#f7f3f0; color:#333;}
+    h1 { text-align: center; color:#806250; }
+    form { background:#fff; padding:15px; border-radius:10px; margin-bottom:20px;}
+    input,textarea,select { width:100%; padding:8px; margin:6px 0; border:1px solid #ccc; border-radius:6px;}
+    table { width:100%; border-collapse:collapse; background:#fff;}
+    th,td { border:1px solid #ddd; padding:8px; text-align:left;}
+    th { background:#806250; color:white; }
+    img { max-width:60px; }
+    button { cursor:pointer; margin:2px; }
+    #search { width: 100%; padding:10px; margin-bottom:15px; border:2px solid #806250; border-radius:8px;}
   </style>
 </head>
 <body>
-  <h1>Panel Admin - Tilo Café</h1>
+  <h1>Panel de Administración - Tilo Café</h1>
 
-  <div class="search-box">
-    <input type="text" id="searchInput" placeholder="🔍 Buscar producto...">
+  <!-- Caja para guardar el token -->
+  <div style="margin-bottom:15px; background:#eee; padding:10px; border-radius:8px;">
+    <label for="token">Token de GitHub:</label><br>
+    <input type="password" id="token" placeholder="Pega tu token aquí" style="width:70%; padding:8px;">
+    <button onclick="saveToken()">Guardar Token</button>
+    <button onclick="clearToken()">Borrar Token</button>
+    <p id="tokenStatus"></p>
   </div>
 
-  <div class="container">
-    <form id="productForm">
-      <input type="hidden" id="productId">
-      <input type="text" id="nombre" placeholder="Nombre del producto" required>
-      <textarea id="descripcion" placeholder="Descripción" required></textarea>
-      <input type="number" id="precio" placeholder="Precio" required>
-      <select id="categoria" required>
-        <option value="">Seleccionar categoría</option>
-        <option value="CAFETERÍA">CAFETERÍA</option>
-        <option value="PICADAS">PICADAS</option>
-        <option value="COMIDAS">COMIDAS</option>
-        <option value="POSTRES">POSTRES</option>
-        <option value="REFRESCOS">REFRESCOS</option>
-        <option value="TRAGOS">TRAGOS</option>
-        <option value="EVENTOS">EVENTOS</option>
-      </select>
-      <input type="text" id="imagen" placeholder="Ruta de imagen (ej: img/cafe.jpg)">
-      <button type="submit">💾 Guardar producto</button>
-    </form>
+  <!-- Formulario de producto -->
+  <form id="form">
+    <input type="hidden" id="editIndex">
+    <label>Nombre</label>
+    <input type="text" id="nombre" required>
+    <label>Descripción</label>
+    <textarea id="descripcion" required></textarea>
+    <label>Precio</label>
+    <input type="number" id="precio" required>
+    <label>Imagen (ej: img/foto.jpg)</label>
+    <input type="text" id="imagen" required>
+    <label>Categoría</label>
+    <select id="categoria" required>
+      <option value="">-- Selecciona una categoría --</option>
+      <option value="CAFETERÍA">CAFETERÍA</option>
+      <option value="COMIDAS">COMIDAS</option>
+      <option value="POSTRES">POSTRES</option>
+      <option value="REFRESCOS">REFRESCOS</option>
+      <option value="VINOS Y TRAGOS">VINOS Y TRAGOS</option>
+    </select>
+    <button type="submit">Guardar</button>
+  </form>
 
-    <div class="product-list" id="product-list"></div>
-  </div>
+  <!-- Buscador -->
+  <input type="text" id="search" placeholder="🔍 Buscar por nombre, descripción o categoría...">
+
+  <!-- Tabla de productos -->
+  <h2>Productos</h2>
+  <table>
+    <thead>
+      <tr><th>Imagen</th><th>Nombre</th><th>Descripción</th><th>Categoría</th><th>Precio</th><th>Acciones</th></tr>
+    </thead>
+    <tbody id="tbody"></tbody>
+  </table>
 
   <script>
-    let productos = [];
+    const USERNAME = "frenchtilo-boop";   // <-- tu usuario de GitHub
+    const REPO = "cartatilo";             // <-- tu repo de GitHub
+    const FILE_PATH = "productos.json";
 
-    fetch('productos.json')
-      .then(res => res.json())
-      .then(data => {
-        productos = data;
-        renderProducts(productos);
-      });
+    let productos=[];
+    let productosFiltrados=[];
 
-    function renderProducts(lista) {
-      const cont = document.getElementById('product-list');
-      cont.innerHTML = '';
-      lista.forEach((p, i) => {
-        const item = document.createElement('div');
-        item.className = 'item';
-        item.innerHTML = `
-          <h3>${p.nombre}</h3>
-          <p>${p.descripcion}</p>
-          <p><b>$${p.precio}</b> - ${p.categoria}</p>
-          <p><small>${p.imagen}</small></p>
-          <button onclick="editProduct(${i})">✏️ Editar</button>
-          <button onclick="deleteProduct(${i})">🗑️ Eliminar</button>
-        `;
-        cont.appendChild(item);
+    // Guardar / borrar token en localStorage
+    function saveToken(){
+      const t=document.getElementById('token').value.trim();
+      if(t){ 
+        localStorage.setItem('github_token',t); 
+        document.getElementById('token').value=''; 
+        document.getElementById('tokenStatus').innerText="✅ Token guardado."; 
+      }
+    }
+    function clearToken(){ 
+      localStorage.removeItem('github_token'); 
+      document.getElementById('tokenStatus').innerText="⚠️ Token borrado."; 
+    }
+    function getToken(){ return localStorage.getItem('github_token'); }
+
+    // Cargar productos desde GitHub
+    async function loadProducts(){
+      const url=`https://raw.githubusercontent.com/${USERNAME}/${REPO}/main/${FILE_PATH}`;
+      const res=await fetch(url);
+      productos=await res.json();
+      productosFiltrados=[...productos];
+      render();
+    }
+
+    // Renderizar tabla
+    function render(){
+      const tb=document.getElementById('tbody'); tb.innerHTML='';
+      productosFiltrados.forEach((p,i)=>{
+        tb.innerHTML+=`
+          <tr>
+            <td><img src="${p.imagen}" alt=""></td>
+            <td>${p.nombre}</td>
+            <td>${p.descripcion}</td>
+            <td>${p.categoria}</td>
+            <td>$${p.precio}</td>
+            <td>
+              <button onclick="edit(${i})">Editar</button>
+              <button onclick="del(${i})">Eliminar</button>
+            </td>
+          </tr>`;
       });
     }
 
-    document.getElementById('searchInput').addEventListener('input', e => {
-      const term = e.target.value.toLowerCase();
-      const filtrados = productos.filter(p =>
+    // Guardar cambios en GitHub
+    async function saveToGitHub(newContent){
+      const TOKEN=getToken();
+      if(!TOKEN){ alert("⚠️ Necesitas guardar tu token primero."); return; }
+
+      const apiUrl=`https://api.github.com/repos/${USERNAME}/${REPO}/contents/${FILE_PATH}`;
+      const getRes=await fetch(apiUrl,{ headers:{Authorization:`token ${TOKEN}`} });
+      const data=await getRes.json();
+
+      const updateRes=await fetch(apiUrl,{
+        method:"PUT",
+        headers:{
+          "Authorization":`token ${TOKEN}`,
+          "Content-Type":"application/json"
+        },
+        body:JSON.stringify({
+          message:"Actualización desde admin.html",
+          content:btoa(unescape(encodeURIComponent(newContent))),
+          sha:data.sha
+        })
+      });
+
+      if(updateRes.ok){ alert("✅ Cambios guardados en GitHub."); }
+      else{ alert("❌ Error al guardar en GitHub."); }
+    }
+
+    // Formulario: agregar/editar
+    document.getElementById('form').onsubmit=function(e){
+      e.preventDefault();
+      const idx=document.getElementById('editIndex').value;
+      const prod={
+        nombre:document.getElementById('nombre').value,
+        descripcion:document.getElementById('descripcion').value,
+        precio:parseFloat(document.getElementById('precio').value),
+        imagen:document.getElementById('imagen').value,
+        categoria:document.getElementById('categoria').value
+      };
+      if(idx===''){ productos.push(prod);} 
+      else { productos[idx]=prod; document.getElementById('editIndex').value='';}
+      productosFiltrados=[...productos];
+      render();
+      this.reset();
+      saveToGitHub(JSON.stringify(productos,null,2));
+    }
+
+    // Editar producto
+    function edit(i){
+      const p=productosFiltrados[i];
+      const indexReal = productos.findIndex(x=>x.nombre===p.nombre && x.descripcion===p.descripcion); 
+      document.getElementById('nombre').value=p.nombre;
+      document.getElementById('descripcion').value=p.descripcion;
+      document.getElementById('precio').value=p.precio;
+      document.getElementById('imagen').value=p.imagen;
+      document.getElementById('categoria').value=p.categoria;
+      document.getElementById('editIndex').value=indexReal;
+
+      // 🔥 Subir el formulario arriba
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    }
+
+    // Eliminar producto
+    function del(i){
+      const p=productosFiltrados[i];
+      const indexReal = productos.findIndex(x=>x.nombre===p.nombre && x.descripcion===p.descripcion); 
+      if(confirm('¿Eliminar producto?')){
+        productos.splice(indexReal,1);
+        productosFiltrados=[...productos];
+        render();
+        saveToGitHub(JSON.stringify(productos,null,2));
+      }
+    }
+
+    // Buscador
+    document.getElementById('search').addEventListener('input',function(){
+      const term=this.value.toLowerCase();
+      productosFiltrados=productos.filter(p=>
         p.nombre.toLowerCase().includes(term) ||
         p.descripcion.toLowerCase().includes(term) ||
         p.categoria.toLowerCase().includes(term)
       );
-      renderProducts(filtrados);
+      render();
     });
 
-    document.getElementById('productForm').addEventListener('submit', async e => {
-      e.preventDefault();
-      const id = document.getElementById('productId').value;
-      const nuevo = {
-        nombre: document.getElementById('nombre').value,
-        descripcion: document.getElementById('descripcion').value,
-        precio: Number(document.getElementById('precio').value),
-        categoria: document.getElementById('categoria').value,
-        imagen: document.getElementById('imagen').value
-      };
-
-      if (id) productos[id] = nuevo;
-      else productos.push(nuevo);
-
-      renderProducts(productos);
-      e.target.reset();
-      document.getElementById('productId').value = '';
-
-      const token = "TU_TOKEN_AQUI"; // <-- Pega tu token aquí
-      const owner = "frenchtilo-boop";
-      const repo = "cartatilo";
-      const path = "productos.json";
-
-      try {
-        const res = await fetch(`https://api.github.com/repos/${owner}/${repo}/contents/${path}`, {
-          headers: { Authorization: `token ${token}` }
-        });
-        const data = await res.json();
-        const sha = data.sha;
-
-        const body = {
-          message: "Actualización desde admin.html",
-          content: btoa(unescape(encodeURIComponent(JSON.stringify(productos, null, 2)))),
-          sha
-        };
-
-        const put = await fetch(`https://api.github.com/repos/${owner}/${repo}/contents/${path}`, {
-          method: 'PUT',
-          headers: {
-            Authorization: `token ${token}`,
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify(body)
-        });
-
-        if (put.ok) alert("✅ Actualizado en GitHub correctamente");
-        else alert("⚠️ Error al guardar en GitHub");
-      } catch (err) {
-        console.error(err);
-        alert("❌ Error de conexión con GitHub");
-      }
-    });
-
-    function editProduct(i) {
-      const p = productos[i];
-      document.getElementById('productId').value = i;
-      document.getElementById('nombre').value = p.nombre;
-      document.getElementById('descripcion').value = p.descripcion;
-      document.getElementById('precio').value = p.precio;
-      document.getElementById('categoria').value = p.categoria;
-      document.getElementById('imagen').value = p.imagen;
-      window.scrollTo({ top: 0, behavior: 'smooth' });
-    }
-
-    function deleteProduct(i) {
-      if (confirm("¿Eliminar este producto?")) {
-        productos.splice(i, 1);
-        renderProducts(productos);
-      }
-    }
+    // Iniciar
+    loadProducts();
+    if(getToken()){ document.getElementById('tokenStatus').innerText="🔐 Token cargado."; }
   </script>
 </body>
 </html>
