--- a/admin.html
+++ b/admin.html
@@ -8,18 +8,21 @@
     body { font-family: Arial, sans-serif; margin:20px; background:#f7f3f0; color:#333;}
     h1 { text-align: center; color:#806250; }
     form { background:#fff; padding:15px; border-radius:10px; margin-bottom:20px;}
-    input,textarea { width:100%; padding:8px; margin:6px 0; border:1px solid #ccc; border-radius:6px;}
+    input,textarea,select { width:100%; padding:8px; margin:6px 0; border:1px solid #ccc; border-radius:6px;}
     table { width:100%; border-collapse:collapse; background:#fff;}
     th,td { border:1px solid #ddd; padding:8px; text-align:left;}
     th { background:#806250; color:white; }
-    img { max-width:60px; }
-    button { cursor:pointer; }
+    img { max-width:60px; border-radius:6px; }
+    button { cursor:pointer; background:#806250; color:white; border:none; padding:6px 10px; border-radius:6px; }
+    button:hover { background:#a07b68; }
+    #preview { max-width:100px; margin-top:5px; display:block; }
+    #search { width:40%; padding:8px; border-radius:6px; border:1px solid #ccc; }
   </style>
 </head>
 <body>
   <h1>Panel de Administración - Tilo Café</h1>
 
-  <!-- Caja para guardar el token -->
+  <!-- TOKEN -->
   <div style="margin-bottom:15px; background:#eee; padding:10px; border-radius:8px;">
     <label for="token">Token de GitHub:</label><br>
     <input type="password" id="token" placeholder="Pega tu token aquí" style="width:70%; padding:8px;">
@@ -28,40 +31,62 @@
     <p id="tokenStatus"></p>
   </div>
 
-  <!-- Formulario de producto -->
+  <!-- BUSCADOR -->
+  <div style="margin-bottom:15px;">
+    <input type="text" id="search" placeholder="Buscar producto..." oninput="buscarProducto()">
+  </div>
+
+  <!-- FORMULARIO -->
   <form id="form">
     <input type="hidden" id="editIndex">
     <label>Nombre</label>
     <input type="text" id="nombre" required>
+
     <label>Descripción</label>
     <textarea id="descripcion" required></textarea>
+
     <label>Precio</label>
     <input type="number" id="precio" required>
+
     <label>Imagen (ej: img/foto.jpg)</label>
-    <input type="text" id="imagen" required>
+    <input type="text" id="imagen" required oninput="previewImage()">
+    <img id="preview" src="" alt="Vista previa">
+
     <label>Categoría</label>
-    <input type="text" id="categoria" required>
+    <select id="categoria" required>
+      <option value="">Seleccionar...</option>
+      <option value="CAFETERÍA">CAFETERÍA</option>
+      <option value="COMIDAS">COMIDAS</option>
+      <option value="POSTRES">POSTRES</option>
+      <option value="TRAGOS">TRAGOS</option>
+      <option value="REFRESCOS">REFRESCOS</option>
+      <option value="VINOS">VINOS</option>
+      <option value="HAPPY HOUR">HAPPY HOUR</option>
+      <option value="EVENTOS">EVENTOS</option>
+    </select>
+
     <button type="submit">Guardar</button>
   </form>
 
-  <!-- Tabla de productos -->
+  <!-- TABLA -->
   <h2>Productos</h2>
   <table>
     <thead>
-      <tr><th>Imagen</th><th>Nombre</th><th>Descripción</th><th>Categoría</th><th>Precio</th><th>Acciones</th></tr>
+      <tr>
+        <th>Imagen</th><th>Nombre</th><th>Descripción</th><th>Categoría</th><th>Precio</th><th>Acciones</th>
+      </tr>
     </thead>
     <tbody id="tbody"></tbody>
   </table>
 
   <script>
-    // ⚡ CONFIGURACIÓN: ahora apunta a tu repo real en GitHub
-    const USERNAME = "frenchtilo-boop";   // <-- tu usuario de GitHub
-    const REPO = "cartatilo";             // <-- tu repo de GitHub
+    const USERNAME = "frenchtilo-boop";
+    const REPO = "cartatilo";
     const FILE_PATH = "productos.json";
 
-    let productos=[];
+    let productos = [];
 
-    // Guardar / borrar token en localStorage
+    // 🟤 TOKEN
     function saveToken(){
       const t=document.getElementById('token').value.trim();
       if(t){ 
@@ -76,18 +101,18 @@
     }
     function getToken(){ return localStorage.getItem('github_token'); }
 
-    // Cargar productos desde GitHub
+    // 🟤 CARGAR PRODUCTOS
     async function loadProducts(){
       const url=`https://raw.githubusercontent.com/${USERNAME}/${REPO}/main/${FILE_PATH}`;
       const res=await fetch(url);
       productos=await res.json();
-      render();
+      render(productos);
     }
 
-    // Renderizar tabla
-    function render(){
+    // 🟤 RENDERIZAR TABLA
+    function render(lista){
       const tb=document.getElementById('tbody'); tb.innerHTML='';
-      productos.forEach((p,i)=>{
+      lista.forEach((p,i)=>{
         tb.innerHTML+=`
           <tr>
             <td><img src="${p.imagen}" alt=""></td>
@@ -103,7 +128,24 @@
       });
     }
 
-    // Guardar cambios en GitHub
+    // 🟤 BUSCAR PRODUCTO
+    function buscarProducto(){
+      const q=document.getElementById('search').value.toLowerCase();
+      const filtrados=productos.filter(p=> 
+        p.nombre.toLowerCase().includes(q) || 
+        p.descripcion.toLowerCase().includes(q) ||
+        p.categoria.toLowerCase().includes(q)
+      );
+      render(filtrados);
+    }
+
+    // 🟤 PREVIEW DE IMAGEN
+    function previewImage(){
+      const src=document.getElementById('imagen').value.trim();
+      document.getElementById('preview').src=src || '';
+    }
+
+    // 🟤 GUARDAR EN GITHUB
     async function saveToGitHub(newContent){
       const TOKEN=getToken();
       if(!TOKEN){ alert("⚠️ Necesitas guardar tu token primero."); return; }
@@ -129,7 +171,7 @@
       else{ alert("❌ Error al guardar en GitHub."); }
     }
 
-    // Formulario: agregar/editar
+    // 🟤 FORMULARIO
     document.getElementById('form').onsubmit=function(e){
       e.preventDefault();
       const idx=document.getElementById('editIndex').value;
@@ -142,12 +184,13 @@
       };
       if(idx===''){ productos.push(prod);} 
       else { productos[idx]=prod; document.getElementById('editIndex').value='';}
-      render();
+      render(productos);
       this.reset();
+      document.getElementById('preview').src='';
       saveToGitHub(JSON.stringify(productos,null,2));
     }
 
-    // Editar producto
+    // 🟤 EDITAR
     function edit(i){
       const p=productos[i];
       document.getElementById('nombre').value=p.nombre;
@@ -156,17 +199,19 @@
       document.getElementById('imagen').value=p.imagen;
       document.getElementById('categoria').value=p.categoria;
       document.getElementById('editIndex').value=i;
+      document.getElementById('preview').src=p.imagen;
     }
 
-    // Eliminar producto
+    // 🟤 ELIMINAR
     function del(i){
       if(confirm('¿Eliminar producto?')){
-        productos.splice(i,1); render();
+        productos.splice(i,1);
+        render(productos);
         saveToGitHub(JSON.stringify(productos,null,2));
       }
     }
 
-    // Iniciar
+    // 🟤 INICIAR
     loadProducts();
     if(getToken()){ document.getElementById('tokenStatus').innerText="🔐 Token cargado."; }
   </script>
