--- a/admin.html
+++ b/admin.html
@@ -63,6 +63,9 @@
       <option value="VINOS">VINOS</option>
       <option value="HAPPY HOUR">HAPPY HOUR</option>
       <option value="EVENTOS">EVENTOS</option>
+      <!-- 🆕 CATEGORÍAS AGREGADAS -->
+      <option value="PROMOCIONES">PROMOCIONES</option>
+      <option value="SÁNDWICHES">SÁNDWICHES</option>
     </select>
 
     <button type="submit">Guardar</button>
