--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     header {
       background: #fff;
       text-align: center;
-      padding: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      padding: 0;
+      margin: 0;
+      overflow: hidden;
     }
     header img {
-      max-width: 100%;
+      width: 100vw;
       height: auto;
+      display: block;
     }
     .banner {
       text-align: center;
