--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <img src="img/french99.jpg" alt="Tilo Café" /> 
   </header>
 
-  <div class="banner">¡Bienvenidos a Tilo Café Agüero 2298!</div>
+  <div class="banner">¡Bienvenidos a Tilo Resto Café french 3700!</div>
 
   <div class="search-box">
     <input type="text" id="searchInput" placeholder="🔍 Buscar producto... (presione Enter)">
@@ -140,7 +140,7 @@
     <button onclick="renderProducts('SANDWICHES')"><span class="icon">🥪</span>Sándwiches</button>
     <button onclick="renderProducts('PROMOCIONES')"><span class="icon">💥</span>Promociones</button>
     <button onclick="renderProducts('POSTRES')"><span class="icon">🍰</span>Postres</button>
-    <button onclick="renderProducts('REFRESCOS')"><span class="icon">🥤🍷</span>Refrescos y Vinos</button>
+    <button onclick="renderProducts('REFRESCOS')"><span class="icon">🥤🍷</span>Bebidas y Vinos</button>
     <button onclick="renderProducts('TRAGOS')"><span class="icon">🍹⏰</span>Tragos y HAPPY HOUR</button>
     <button onclick="renderProducts('EVENTOS')"><span class="icon">⭐</span>EVENTOS Y NOVEDADES</button>
   </nav>
