--- a/admin.html
+++ b/admin.html
@@ -3,284 +3,275 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Admin Carta Tilo Café</title>
+  <title>Admin Carta - Tilo Café</title>
   <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      background: #888;
-      color: #45270a;
-    }
-    header {
-      background: #fff;
-      text-align: center;
-      padding: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    header img {
-      width: 100%;
-      height: 220px;
-      object-fit: cover;
-    }
-    h1 {
-      text-align: center;
-      margin: 15px;
-    }
-    .search-box {
-      text-align: center;
-      margin: 10px;
-    }
-    .search-box input {
-      width: 90%;
-      max-width: 400px;
-      padding: 10px;
-      border: 2px solid #8c6954;
-      border-radius: 8px;
-      font-size: 1rem;
-    }
-    .form {
-      text-align: center;
-      background: #fff;
-      margin: 20px auto;
-      padding: 20px;
-      border-radius: 12px;
-      width: 90%;
-      max-width: 500px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.15);
-    }
-    .form input, .form textarea, .form select {
-      width: 100%;
-      padding: 10px;
-      margin: 5px 0;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-    }
-    .form button {
-      background: #8c6954;
-      color: white;
-      border: none;
-      border-radius: 8px;
-      padding: 10px 15px;
-      cursor: pointer;
-    }
-    .form button:hover {
-      background: #6b4e3d;
-    }
-    .item-list {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-      padding: 20px;
-    }
-    .item {
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.15);
-      overflow: hidden;
-      width: 260px;
-      transition: transform 0.2s ease;
-      text-align: center;
-      padding-bottom: 10px;
-    }
-    .item:hover { transform: scale(1.02); }
-    .item img {
-      width: 100%;
-      height: 150px;
-      object-fit: cover;
-    }
-    .item h3 { margin: 10px; }
-    .item p { margin: 0 10px 10px; }
-    .item .price {
-      font-weight: bold;
-      color: #000;
-      margin-bottom: 5px;
-      display: block;
-    }
-    .item button {
-      margin: 3px;
-      background: #8c6954;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      padding: 6px 10px;
-      cursor: pointer;
-    }
-    .item button:hover {
-      background: #6b4e3d;
-    }
-    /* Botón subir */
+    body { font-family: Arial, sans-serif; margin:20px; background:#f7f3f0; color:#333;}
+    h1 { text-align: center; color:#806250; }
+    form { background:#fff; padding:15px; border-radius:10px; margin-bottom:20px;}
+    input,textarea,select { width:100%; padding:8px; margin:6px 0; border:1px solid #ccc; border-radius:6px;}
+    table { width:100%; border-collapse:collapse; background:#fff;}
+    th,td { border:1px solid #ddd; padding:8px; text-align:left;}
+    th { background:#806250; color:white; }
+    img { max-width:60px; border-radius:6px; }
+    button { cursor:pointer; background:#806250; color:white; border:none; padding:6px 10px; border-radius:6px; }
+    button:hover { background:#a07b68; }
+    #preview { max-width:100px; margin-top:5px; display:block; }
+    #search { width:40%; padding:8px; border-radius:6px; border:1px solid #ccc; }
+
+    /* 🟢 BOTÓN FLOTANTE SUBIR */
     #btnSubir {
       position: fixed;
       bottom: 25px;
       right: 25px;
-      background: #8c6954;
+      background-color: #806250;
       color: white;
       border: none;
       border-radius: 50%;
-      width: 50px;
-      height: 50px;
-      font-size: 1.5rem;
+      width: 45px;
+      height: 45px;
+      font-size: 22px;
       cursor: pointer;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+      box-shadow: 0 3px 6px rgba(0,0,0,0.3);
       display: none;
-      transition: opacity 0.3s ease;
+      transition: all 0.3s ease;
+      z-index: 999;
     }
     #btnSubir:hover {
-      background: #6b4e3d;
+      background-color: #a07b68;
+      transform: scale(1.1);
     }
   </style>
 </head>
 <body>
-  <header>
-    <img src="img/french99.jpg" alt="Tilo Café" /> 
-  </header>
+  <h1>Panel de Administración - Tilo Café</h1>
 
-  <h1>Administrador de Carta</h1>
-
-  <div class="search-box">
-    <input type="text" id="searchInput" placeholder="🔍 Buscar producto... (presione Enter)">
+  <!-- TOKEN -->
+  <div style="margin-bottom:15px; background:#eee; padding:10px; border-radius:8px;">
+    <label for="token">Token de GitHub:</label><br>
+    <input type="password" id="token" placeholder="Pega tu token aquí" style="width:70%; padding:8px;">
+    <button onclick="saveToken()">Guardar Token</button>
+    <button onclick="clearToken()">Borrar Token</button>
+    <p id="tokenStatus"></p>
   </div>
 
-  <div class="form">
-    <input type="text" id="nombre" placeholder="Nombre" required>
-    <textarea id="descripcion" placeholder="Descripción"></textarea>
-    <input type="number" id="precio" placeholder="Precio" required>
-    <input type="text" id="imagen" placeholder="URL de imagen">
-    <select id="categoria">
-      <option value="CAFETERÍA">Cafetería</option>
-      <option value="PICADAS">Entradas</option>
-      <option value="COMIDAS">Comidas</option>
-      <option value="POSTRES">Postres</option>
-      <option value="REFRESCOS">Refrescos y Vinos</option>
-      <option value="TRAGOS">Tragos y Happy Hour</option>
-      <option value="EVENTOS">Eventos y Novedades</option>
+  <!-- BUSCADOR -->
+  <div style="margin-bottom:15px;">
+    <input type="text" id="search" placeholder="Buscar producto... (Enter para buscar)">
+  </div>
+
+  <!-- FORMULARIO -->
+  <form id="form">
+    <input type="hidden" id="editIndex">
+    <label>Nombre</label>
+    <input type="text" id="nombre" required>
+
+    <label>Descripción</label>
+    <textarea id="descripcion" required></textarea>
+
+    <label>Precio</label>
+    <input type="number" id="precio" required>
+
+    <label>Imagen (ej: img/foto.jpg)</label>
+    <input type="text" id="imagen" required oninput="previewImage()">
+    <img id="preview" src="" alt="Vista previa">
+
+    <label>Categoría</label>
+    <select id="categoria" required>
+      <option value="">Seleccionar...</option>
+      <option value="CAFETERÍA">CAFETERÍA</option>
+      <option value="COMIDAS">COMIDAS</option>
+      <option value="POSTRES">POSTRES</option>
+      <option value="TRAGOS">TRAGOS</option>
+      <option value="REFRESCOS">REFRESCOS</option>
+      <option value="VINOS">VINOS</option>
+      <option value="HAPPY HOUR">HAPPY HOUR</option>
+      <option value="EVENTOS">EVENTOS</option>
+      <option value="PROMOCIONES">PROMOCIONES</option>
+      <option value="SÁNDWICHES">SÁNDWICHES</option>
     </select>
-    <button onclick="agregarProducto()">Agregar / Actualizar</button>
-  </div>
 
-  <div class="item-list" id="product-list"></div>
+    <button type="submit">Guardar</button>
+  </form>
 
-  <!-- Botón para subir -->
+  <!-- TABLA -->
+  <h2 id="tablaTitulo">Productos</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>Imagen</th><th>Nombre</th><th>Descripción</th><th>Categoría</th><th>Precio</th><th>Acciones</th>
+      </tr>
+    </thead>
+    <tbody id="tbody"></tbody>
+  </table>
+
+  <!-- 🟢 BOTÓN SUBIR -->
   <button id="btnSubir" title="Subir">⬆️</button>
 
   <script>
+    const USERNAME = "frenchtilo-boop";
+    const REPO = "cartatilo";
+    const FILE_PATH = "productos.json";
+
     let productos = [];
-    let editIndex = -1;
+    let vistaActual = [];
 
-    fetch('productos.json')
-      .then(response => response.json())
-      .then(data => {
-        productos = data;
-        renderProducts();
-      });
-
-    function renderProducts(lista = productos) {
-      const container = document.getElementById('product-list');
-      container.innerHTML = '';
-
-      lista.forEach((p) => {
-        const item = document.createElement('div');
-        item.className = 'item';
-        item.innerHTML = `
-          <img src="${p.imagen}" alt="${p.nombre}">
-          <h3>${p.nombre}</h3>
-          <p>${p.descripcion}</p>
-          <span class="price">$${p.precio}</span>
-          <button onclick="editarProductoPorNombre('${p.nombre.replace(/'/g, "\\'")}')">Editar</button>
-          <button onclick="eliminarProductoPorNombre('${p.nombre.replace(/'/g, "\\'")}')">Eliminar</button>
-        `;
-        container.appendChild(item);
-      });
-    }
-
-    function agregarProducto() {
-      const nombre = document.getElementById('nombre').value.trim();
-      const descripcion = document.getElementById('descripcion').value.trim();
-      const precio = parseFloat(document.getElementById('precio').value);
-      const imagen = document.getElementById('imagen').value.trim();
-      const categoria = document.getElementById('categoria').value;
-
-      if (!nombre || isNaN(precio)) return alert('Completa nombre y precio');
-
-      const producto = { nombre, descripcion, precio, imagen, categoria };
-
-      if (editIndex >= 0) {
-        productos[editIndex] = producto;
-        editIndex = -1;
-      } else {
-        productos.push(producto);
-      }
-
-      guardarProductos();
-      renderProducts();
-      limpiarFormulario();
-    }
-
-    function editarProducto(index) {
-      const p = productos[index];
-      document.getElementById('nombre').value = p.nombre;
-      document.getElementById('descripcion').value = p.descripcion;
-      document.getElementById('precio').value = p.precio;
-      document.getElementById('imagen').value = p.imagen;
-      document.getElementById('categoria').value = p.categoria;
-      editIndex = index;
-      window.scrollTo({ top: 0, behavior: 'smooth' });
-    }
-
-    function eliminarProducto(index) {
-      if (confirm('¿Seguro que quieres eliminar este producto?')) {
-        productos.splice(index, 1);
-        guardarProductos();
-        renderProducts();
+    // 🟤 TOKEN
+    function saveToken(){
+      const t=document.getElementById('token').value.trim();
+      if(t){ 
+        localStorage.setItem('github_token',t); 
+        document.getElementById('token').value=''; 
+        document.getElementById('tokenStatus').innerText="✅ Token guardado."; 
       }
     }
+    function clearToken(){ 
+      localStorage.removeItem('github_token'); 
+      document.getElementById('tokenStatus').innerText="⚠️ Token borrado."; 
+    }
+    function getToken(){ return localStorage.getItem('github_token'); }
 
-    function editarProductoPorNombre(nombre) {
-      const index = productos.findIndex(p => p.nombre === nombre);
-      if (index !== -1) editarProducto(index);
+    // 🟤 CARGAR PRODUCTOS
+    async function loadProducts(){
+      const url=`https://raw.githubusercontent.com/${USERNAME}/${REPO}/main/${FILE_PATH}`;
+      const res=await fetch(url);
+      productos=await res.json();
+      vistaActual = [...productos];
+      render(vistaActual);
     }
 
-    function eliminarProductoPorNombre(nombre) {
-      const index = productos.findIndex(p => p.nombre === nombre);
-      if (index !== -1) eliminarProducto(index);
+    // 🟤 RENDERIZAR TABLA
+    function render(lista){
+      const tb=document.getElementById('tbody'); tb.innerHTML='';
+      lista.forEach((p)=>{
+        tb.innerHTML+=`
+          <tr>
+            <td><img src="${p.imagen}" alt=""></td>
+            <td>${p.nombre}</td>
+            <td>${p.descripcion}</td>
+            <td>${p.categoria}</td>
+            <td>$${p.precio}</td>
+            <td>
+              <button onclick="editByName('${p.nombre.replace(/'/g,"\\'")}')">Editar</button>
+              <button onclick="delByName('${p.nombre.replace(/'/g,"\\'")}')">Eliminar</button>
+            </td>
+          </tr>`;
+      });
     }
 
-    function guardarProductos() {
-      localStorage.setItem('productos', JSON.stringify(productos));
-    }
-
-    function limpiarFormulario() {
-      document.getElementById('nombre').value = '';
-      document.getElementById('descripcion').value = '';
-      document.getElementById('precio').value = '';
-      document.getElementById('imagen').value = '';
-      document.getElementById('categoria').value = 'CAFETERÍA';
-    }
-
-    const input = document.getElementById('searchInput');
-    input.addEventListener('keydown', function(e) {
-      if (e.key === 'Enter') {
+    // 🟤 BUSCAR CON ENTER
+    document.getElementById('search').addEventListener('keypress', function(e){
+      if(e.key === 'Enter'){
         e.preventDefault();
-        const term = this.value.toLowerCase().trim();
-        const filtrados = productos.filter(p => 
-          p.nombre.toLowerCase().includes(term) ||
-          p.descripcion.toLowerCase().includes(term) ||
-          p.categoria.toLowerCase().includes(term)
+        const q=this.value.toLowerCase();
+        vistaActual=productos.filter(p=> 
+          p.nombre.toLowerCase().includes(q) || 
+          p.descripcion.toLowerCase().includes(q) ||
+          p.categoria.toLowerCase().includes(q)
         );
-        renderProducts(filtrados);
-        document.getElementById('product-list').scrollIntoView({ behavior: 'smooth' });
+        render(vistaActual);
+        document.getElementById('tablaTitulo').scrollIntoView({ behavior: "smooth" });
       }
     });
 
-    // Botón subir
+    // 🟤 PREVIEW DE IMAGEN
+    function previewImage(){
+      const src=document.getElementById('imagen').value.trim();
+      document.getElementById('preview').src=src || '';
+    }
+
+    // 🟤 GUARDAR EN GITHUB
+    async function saveToGitHub(newContent){
+      const TOKEN=getToken();
+      if(!TOKEN){ alert("⚠️ Necesitas guardar tu token primero."); return; }
+
+      const apiUrl=`https://api.github.com/repos/${USERNAME}/${REPO}/contents/${FILE_PATH}`;
+      const getRes=await fetch(apiUrl,{ headers:{Authorization:`token ${TOKEN}`} });
+      const data=await getRes.json();
+
+      const updateRes=await fetch(apiUrl,{
+        method:"PUT",
+        headers:{
+          "Authorization":`token ${TOKEN}`,
+          "Content-Type":"application/json"
+        },
+        body:JSON.stringify({
+          message:"Actualización desde admin.html",
+          content:btoa(unescape(encodeURIComponent(newContent))),
+          sha:data.sha
+        })
+      });
+
+      if(updateRes.ok){ alert("✅ Cambios guardados en GitHub."); }
+      else{ alert("❌ Error al guardar en GitHub."); }
+    }
+
+    // 🟤 FORMULARIO
+    document.getElementById('form').onsubmit=function(e){
+      e.preventDefault();
+      const idx=document.getElementById('editIndex').value;
+      const prod={
+        nombre:document.getElementById('nombre').value,
+        descripcion:document.getElementById('descripcion').value,
+        precio:parseFloat(document.getElementById('precio').value),
+        imagen:document.getElementById('imagen').value,
+        categoria:document.getElementById('categoria').value
+      };
+      if(idx===''){ productos.push(prod);} 
+      else { productos[idx]=prod; document.getElementById('editIndex').value='';}
+      vistaActual = [...productos];
+      render(vistaActual);
+      this.reset();
+      document.getElementById('preview').src='';
+      saveToGitHub(JSON.stringify(productos,null,2));
+    }
+
+    // 🟤 EDITAR / ELIMINAR POR NOMBRE
+    function editByName(nombre){
+      const index = productos.findIndex(p => p.nombre === nombre);
+      if(index === -1) return alert("Producto no encontrado.");
+      edit(index);
+    }
+    function delByName(nombre){
+      const index = productos.findIndex(p => p.nombre === nombre);
+      if(index === -1) return alert("Producto no encontrado.");
+      del(index);
+    }
+
+    // 🟤 EDITAR
+    function edit(i){
+      const p=productos[i];
+      document.getElementById('nombre').value=p.nombre;
+      document.getElementById('descripcion').value=p.descripcion;
+      document.getElementById('precio').value=p.precio;
+      document.getElementById('imagen').value=p.imagen;
+      document.getElementById('categoria').value=p.categoria;
+      document.getElementById('editIndex').value=i;
+      document.getElementById('preview').src=p.imagen;
+      document.getElementById('form').scrollIntoView({ behavior: "smooth" });
+    }
+
+    // 🟤 ELIMINAR
+    function del(i){
+      if(confirm('¿Eliminar producto?')){
+        productos.splice(i,1);
+        vistaActual = [...productos];
+        render(vistaActual);
+        saveToGitHub(JSON.stringify(productos,null,2));
+      }
+    }
+
+    // 🟢 BOTÓN SUBIR (mostrar/ocultar y scroll suave)
     const btnSubir = document.getElementById('btnSubir');
     window.addEventListener('scroll', () => {
-      btnSubir.style.display = window.scrollY > 300 ? 'block' : 'none';
+      btnSubir.style.display = window.scrollY > 250 ? 'block' : 'none';
     });
     btnSubir.addEventListener('click', () => {
       window.scrollTo({ top: 0, behavior: 'smooth' });
     });
+
+    // 🟤 INICIAR
+    loadProducts();
+    if(getToken()){ document.getElementById('tokenStatus').innerText="🔐 Token cargado."; }
   </script>
 </body>
 </html>
