--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <button onclick="renderProducts('CAFETERÍA')"><span class="icon">☕</span>Cafetería</button>
     <button onclick="renderProducts('PICADAS')"><span class="icon">🥟</span>Entradas</button>
     <button onclick="renderProducts('COMIDAS')"><span class="icon">🍽️</span>Comidas</button>
-    <button onclick="renderProducts('SANDWICHES')"><span class="icon">🥪</span>Sándwiches</button>
+    <button onclick="renderProducts('SÁNDWICHES')"><span class="icon">🥪</span>Sándwiches</button>
     <button onclick="renderProducts('PROMOCIONES')"><span class="icon">💥</span>Promociones</button>
     <button onclick="renderProducts('POSTRES')"><span class="icon">🍰</span>Postres</button>
     <button onclick="renderProducts('REFRESCOS')"><span class="icon">🥤🍷</span>Bebidas y Vinos</button>
