--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <button onclick="renderProducts('POSTRES')"><span class="icon">🍰</span>Postres</button>
     <button onclick="renderProducts('REFRESCOS')"><span class="icon">🥤🍷</span>Bebidas y Vinos</button>
     <button onclick="renderProducts('TRAGOS')"><span class="icon">🍹⏰</span>Aperitivos y HAPPY HOUR</button>
-    <button onclick="renderProducts('EVENTOS')"><span class="icon">⭐</span>EVENTOS NOVEDADES Y MENU DEL DIA</button>
+    <button onclick="renderProducts('EVENTOS')"><span class="icon">⭐</span>EVENTOS/NOVEDADES Y MENU DEL DIA</button>
   </nav>
 
   <div class="item-list" id="product-list"></div>
